--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="General Principles"
+      content="Explorations of stories and principles of Titans"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,31 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>General Principles</title>
+
+    <meta
+      property="og:title"
+      content="Explorations of stories and principles of Titans"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://generalprinciples.to" />
+    <meta property="og:image" content="%PUBLIC_URL%/og.png" />
+    <meta
+      property="og:description"
+      content="Explorations of stories and principles of Titans"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="generalprinciples.to" />
+    <meta property="twitter:url" content="https://generalprinciples.to" />
+    <meta
+      name="twitter:title"
+      content="Explorations of stories and principles of Titans"
+    />
+    <meta
+      name="twitter:description"
+      content="Explorations of stories and principles of Titans"
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/og.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
